# PasswordSorter

./: CHANGELOG.md  README.md  output1602273779.5308585.csv  pyproject.toml  requirements.txt  test.py
DOCS/: readme.md  sort.md
TestFiles/: Braydooon.txt pastebin.comSvZR2M9L.txt  Chegg Aptoide Zynga myFitnessPal pastebin.comCkGduNnH.txt  NBC Dump #10#01 pastebin.com00uLKweN.txt
passwordsorter/: __init__.py  sort.py  tlds.txt
