[tool.poetry]
name = "passwordsorter"
version = "2020"
description = "Sorts passwords from dumps"
authors = ["FredHappyface"]
license = "MIT"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.5",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Security",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]
homepage = "https://github.com/FHPythonUtils/PasswordSorter"
repository = "https://github.com/FHPythonUtils/PasswordSorter"
documentation = "https://github.com/FHPythonUtils/PasswordSorter/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.5"
email-validator = "^1.1.1"
hashID = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
